objects/tffa__DebugLog__c.object
<CustomObject>
    <description>Database log generated using Logger</description>
    <fields>
        <fullName>tffa__ContextId__c</fullName>
        <description>Execution context id , like submission name/id</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Execution context id</inlineHelpText>
        <label>Context Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CreatedHour__c</fullName>
        <description>Hour value of created date. Useful for summarizing log data on an hourly basis.</description>
        <formula>VALUE(MID(TEXT(CreatedDate),12,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__CreatedOn__c</fullName>
        <description>The Timestamp when the entry was created(deprecated)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CreatedOn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__Entity__c</fullName>
        <description>The name of the primary entity in context</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__Level__c</fullName>
        <description>The logging level</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The logging level</inlineHelpText>
        <label>Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Message__c</fullName>
        <description>The message of the log</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The message of the log</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source of the log, typically will class.method:line</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Debug Log</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__Entity__c</columns>
        <columns>tffa__Source__c</columns>
        <columns>tffa__Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>tffa__ContextId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Entity__c</field>
            <operation>equals</operation>
            <value>SUB-0003289</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>tffa__ErrorLogs</fullName>
        <columns>NAME</columns>
        <columns>tffa__Entity__c</columns>
        <columns>tffa__Source__c</columns>
        <columns>tffa__Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>tffa__ContextId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Level__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </filters>
        <label>Error Logs</label>
    </listViews>
    <listViews>
        <fullName>tffa__WarningLogs</fullName>
        <columns>NAME</columns>
        <columns>tffa__Entity__c</columns>
        <columns>tffa__Source__c</columns>
        <columns>tffa__Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>tffa__ContextId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Level__c</field>
            <operation>equals</operation>
            <value>WARN</value>
        </filters>
        <label>Warning Logs</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>